# overmind

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/overmind-server/: Cargo.toml
crates/overmind-server/migrations/: 0001_domain_core.sql  0002_execution.sql  0003_heartbeats.sql  0004_org_chart.sql  0005_governance.sql
crates/overmind-server/src/: api.rs  audit.rs  db.rs  domain.rs  governance.rs  lib.rs  main.rs  mcp.rs  runner.rs  scheduler.rs  ws.rs
crates/overmind-server/tests/: api.rs  execution.rs  governance.rs  health.rs  memory.rs  org.rs  scheduler.rs
docs/: ARCHITECTURE.md  BRAND.md  PAPERCLIP-ALIGNMENT.md  ROADMAP.md  UX.md  VISION.md
docs/adr/: 0000-template.md  0001-build-from-scratch.md  0002-rust-backend-react-frontend.md  0003-memory-via-mcp-wadachi-optional.md  0004-wadachi-first-party-managed-brain.md  0005-structured-agent-characterization.md  0006-audit-log-and-task-lifecycle.md  0007-paperclip-vocabulary-alignment.md  0008-execution-sessions-and-atomic-checkout.md  0009-heartbeat-scheduler-and-recovery.md  0010-frontend-stack-and-live-updates.md  0011-org-hierarchy-on-agents.md  0012-budgets-and-governance.md  0013-memory-over-mcp.md  0014-docker-deployment.md
docs/landing/: index.html
docs/site/: README.md  app.html  features.html  how-it-works.html  index.html  wadachi.html
docs/site/assets/: motion.js  site.css
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ApprovalsInbox.tsx  Board.tsx  CreateTaskDialog.tsx  HireAgentDialog.tsx  Onboarding.tsx  OrgChart.tsx  TaskCard.tsx  TaskDetail.tsx  TopBar.tsx
web/src/components/ui/: button.tsx  controls.tsx  dialog.tsx  primitives.tsx
web/src/lib/: api.ts  live.ts  status.ts  theme.ts  utils.ts
